# AgiBot-World

./: .gitignore  .pre-commit-config.yaml  AgibotWorld.ipynb  CONTRIBUTING.md  README.md  README_decoder.md  contributing.md  pyproject.toml
.github/: FUNDING.yml
evaluate/: deploy.py  deploy_batched.py  openloop_eval.py
evaluate/agilex/: README.md  agilex_dataset_filter.py  agilex_features.py  agilex_inference.py  convert_agilex_data_to_lerobot.py
evaluate/libero/: README.md  convert_libero_data_to_lerobot.py  eval_libero.sh  main.py
evaluate/lwlab/: deploy.sh  eval_lwlab.py
go1/: zero_stage1_config.json
go1/configs/: go1_air_sft_agilex.py  go1_air_sft_lerobot.py  go1_air_sft_lerobot_DDPM_h800.py  go1_air_sft_lerobot_flowmatching_h800.py  go1_air_sft_lerobot_flowmatching_sde_h800.py  go1_air_sft_lerobot_meanflow.py  go1_air_sft_lerobot_meanflow_h800.py  go1_air_sft_lerobot_meanflow_wodis_h800.py  go1_air_sft_libero.py  go1_base_cfg.py  go1_sft_agilex.py  go1_sft_libero.py
go1/internvl/: conversation.py  dist_utils.py
go1/internvl/model/: __init__.py
go1/internvl/model/go1/: __init__.py  configuration_action_expert.py  configuration_go1.py  modeling_action_expert.py  modeling_go1.py  modeling_internlm2_go1.py  modeling_latent_action_expert.py
go1/internvl/model/internlm2/: configuration_internlm2.py  modeling_internlm2.py  tokenization_internlm2.py  tokenization_internlm2_fast.py
go1/internvl/model/internvl_chat/: __init__.py  configuration_intern_vit.py  configuration_internvl_chat.py  modeling_intern_vit.py  modeling_internvl_chat.py
go1/internvl/patch/: __init__.py  pad_data_collator.py
go1/internvl/train/: constants.py  dataset.py  go1_train.py
go1/lerobot/: dataset_lerobot.py  dataset_transforms.py
go1/shell/: train.sh  train_dev.sh
go1/tools/: env_parse.py
scripts/: convert_to_lerobot.py  extract_tars.py  visualize_dataset.py
